@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.2.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when a mod creates a force before the recipe book can be built (#94)
 ---------------------------------------------------------------------------------------------------
 Version: 3.2.2
 Date: 2021-12-06
